# job_seeker

./: .gitignore  CLAUDE.md  README.md  env_template.txt  pyproject.toml
docs/: README.md  architecture.md  crew_architecture_diagram.md  crew_architecture_diagram.mmd  crew_sequence_diagram.md  crew_sequence_diagram.mmd  crew_workflow_diagram.md  crew_workflow_diagram.mmd  index.html  installation.md  output-files.md  profile-configuration.md  troubleshooting.md  usage.md
knowledge/: resume_template.json
pages/: api-reference.html  architecture.html  getting-started.html  index.html  scripts.js  styles.css
src/job_seeker/: crew.py  main.py
src/job_seeker/config/: agents.yaml  tasks.yaml
src/job_seeker/tools/: job_search_tools.py
