[project]
name = "job_seeker"
version = "0.1.0"
description = "job-seeker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
job_seeker = "job_seeker.main:run"
run_crew = "job_seeker.main:run"
train = "job_seeker.main:train"
replay = "job_seeker.main:replay"
test = "job_seeker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
